--- a/Pool.htm
+++ b/Pool.htm
@@ -5,6 +5,7 @@
 		<title>Pool</title>
 		<style>
 			body{padding:0;margin:0;background-color:black}
+			canvas{position:fixed;top:50%;transform:translateY(-50%)}
 		</style>
 	</head>
 	<body>
