--- a/PoolGameConcept.htm
+++ b/PoolGameConcept.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ball with texture</title>
+		<title>Rotating ball with a texture</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<style>
 			html,body{background-color:white;padding:0;margin:0}
