--- a/PoolGameConcept.htm
+++ b/PoolGameConcept.htm
@@ -115,11 +115,12 @@ Pool.Preloader.prototype = {
 
 Pool.Game = function (game)
 	{
-	this.ball = null;
+	this.balls = []
+	this.balls_textures1 = [];
+	this.balls_textures2 = [];
+
 	this.mask = null;
 	this.sphere = null;
-	this.texture1 = null;
-	this.texture2 = null;
 	this.speedRotation = 0.5;
 
 	// SCALING THE CANVAS SIZE FOR THE GAME
@@ -142,71 +143,58 @@ Pool.Game.prototype = {
 
 	create: function ()
 		{
-		this.createBallSprite(50,   50, "ball1");
-		this.createBallSprite(150,  50, "ball2");
-		this.createBallSprite(250,  50, "ball3");
-		this.createBallSprite(350,  50, "ball4");
-		this.createBallSprite(450,  50, "ball5");
+		this.createBallSprite(50,   50, "ball1", 0);
+		this.createBallSprite(150,  50, "ball2", 1);
+		this.createBallSprite(250,  50, "ball3", 2);
+		this.createBallSprite(350,  50, "ball4", 3);
+		this.createBallSprite(450,  50, "ball5", 4);
 
-		this.createBallSprite(50,  125, "ball6");
-		this.createBallSprite(150, 125, "ball7");
-		this.createBallSprite(250, 125, "ball8");
-		this.createBallSprite(350, 125, "ball9");
-		this.createBallSprite(450, 125, "ball10");
+		this.createBallSprite(50,  125, "ball6", 5);
+		this.createBallSprite(150, 125, "ball7", 6);
+		this.createBallSprite(250, 125, "ball8", 7);
+		this.createBallSprite(350, 125, "ball9", 8);
+		this.createBallSprite(450, 125, "ball10", 9);
 
-		this.createBallSprite(50,  200, "ball11");
-		this.createBallSprite(150, 200, "ball12");
-		this.createBallSprite(250, 200, "ball13");
-		this.createBallSprite(350, 200, "ball14");
-		this.createBallSprite(450, 200, "ball15");
+		this.createBallSprite(50,  200, "ball11", 10);
+		this.createBallSprite(150, 200, "ball12", 11);
+		this.createBallSprite(250, 200, "ball13", 12);
+		this.createBallSprite(350, 200, "ball14", 13);
+		this.createBallSprite(450, 200, "ball15", 14);
 		},
 
 	update: function ()
 		{
-		this.texture1.rotation = this.rotation;
-		this.texture2.rotation = this.rotation;
-
-		var xshift = Math.cos(this.rotation);
-		var yshift = Math.sin(this.rotation);
-
-		this.texture1.x -= this.speedRotation * xshift;
-		this.texture1.y -= this.speedRotation * yshift;
-
-		this.texture2.x -= this.speedRotation * xshift;
-		this.texture2.y -= this.speedRotation * yshift;
-
-		var l = this.texture1.width / 2;
-		var xdist = l * Math.cos(this.rotation);
-		var ydist = l * Math.sin(this.rotation);
-		var buffer = 60;
-
-		if (this.texture1.x + xdist + buffer < 0)
-			{
-			this.texture1.x = this.texture2.x + 2 * xdist;
-			this.texture1.y = this.texture2.y + 2 * ydist;
-			}
-
-		if (this.texture2.x + xdist + buffer < 0)
-			{
-			this.texture2.x = this.texture1.x + 2 * xdist;
-			this.texture2.y = this.texture1.y + 2 * ydist;
-			}
+		this.updateBallSprite(0);
+		this.updateBallSprite(1);
+		this.updateBallSprite(2);
+		this.updateBallSprite(3);
+		this.updateBallSprite(4);
+		this.updateBallSprite(5);
+		this.updateBallSprite(6);
+		this.updateBallSprite(7);
+		this.updateBallSprite(8);
+		this.updateBallSprite(9);
+		this.updateBallSprite(10);
+		this.updateBallSprite(11);
+		this.updateBallSprite(12);
+		this.updateBallSprite(13);
+		this.updateBallSprite(14);
 		},
 
 	render: function ()
 		{
 		},
 
-	createBallSprite: function (x,y,texture)
+	createBallSprite: function (x,y,texture,index)
 		{
-		this.ball = game.add.sprite(x, y);
-		this.texture1 = game.make.sprite(0, 0, texture);
-		this.texture2 = game.make.sprite(0, 0, texture);
+		this.balls.push(game.add.sprite(x, y));
+		this.balls_textures1.push(game.make.sprite(0, 0, texture));
+		this.balls_textures2.push(game.make.sprite(0, 0, texture));
 
 		this.mask = game.add.graphics(x, y);
 		this.mask.beginFill(0xFFFFFF);
 		this.mask.drawCircle(0, 0, 26);
-		this.ball.mask = this.mask;
+		this.balls[index].mask = this.mask;
 
 		this.sphere = game.add.sprite(x, y, "sphere");
 		this.sphere.alpha = 0.25;
@@ -214,19 +202,51 @@ Pool.Game.prototype = {
 
 		this.rotation = Phaser.Math.degToRad(-15);
 
-		this.texture1.anchor.set(0.5, 0.5);
-		this.texture2.anchor.set(0.5, 0.5);
+		this.balls_textures1[index].anchor.set(0.5, 0.5);
+		this.balls_textures2[index].anchor.set(0.5, 0.5);
 
-		this.ball.addChild(this.texture1);
-		this.ball.addChild(this.texture2);
+		this.balls[index].addChild(this.balls_textures1[index]);
+		this.balls[index].addChild(this.balls_textures2[index]);
 
-		this.texture1.rotation = this.rotation;
-		this.texture2.rotation = this.rotation;
+		this.balls_textures1[index].rotation = this.rotation;
+		this.balls_textures2[index].rotation = this.rotation;
 
-		this.texture1.x += this.texture1.width / 2 * Math.cos(this.rotation);
-		this.texture2.x -= this.texture1.width / 2 * Math.cos(this.rotation);
-		this.texture1.y += this.texture1.width / 2 * Math.sin(this.rotation);
-		this.texture2.y -= this.texture1.width / 2 * Math.sin(this.rotation);
+		this.balls_textures1[index].x += this.balls_textures1[index].width / 2 * Math.cos(this.rotation);
+		this.balls_textures2[index].x -= this.balls_textures1[index].width / 2 * Math.cos(this.rotation);
+		this.balls_textures1[index].y += this.balls_textures1[index].width / 2 * Math.sin(this.rotation);
+		this.balls_textures2[index].y -= this.balls_textures1[index].width / 2 * Math.sin(this.rotation);
+		},
+
+	updateBallSprite: function(index)
+		{
+		this.balls_textures1[index].rotation = this.rotation;
+		this.balls_textures2[index].rotation = this.rotation;
+
+		var xshift = Math.cos(this.rotation);
+		var yshift = Math.sin(this.rotation);
+
+		this.balls_textures1[index].x -= this.speedRotation * xshift;
+		this.balls_textures1[index].y -= this.speedRotation * yshift;
+
+		this.balls_textures2[index].x -= this.speedRotation * xshift;
+		this.balls_textures2[index].y -= this.speedRotation * yshift;
+
+		var l = this.balls_textures1[index].width / 2;
+		var xdist = l * Math.cos(this.rotation);
+		var ydist = l * Math.sin(this.rotation);
+		var buffer = 60;
+
+		if (this.balls_textures1[index].x + xdist + buffer < 0)
+			{
+			this.balls_textures1[index].x = this.balls_textures2[index].x + 2 * xdist;
+			this.balls_textures1[index].y = this.balls_textures2[index].y + 2 * ydist;
+			}
+
+		if (this.balls_textures2[index].x + xdist + buffer < 0)
+			{
+			this.balls_textures2[index].x = this.balls_textures1[index].x + 2 * xdist;
+			this.balls_textures2[index].y = this.balls_textures1[index].y + 2 * ydist;
+			}
 		},
 	};
 
